--- a/_posts/2016-09-07-new-page.markdown
+++ b/_posts/2016-09-07-new-page.markdown
@@ -4,9 +4,20 @@ title: "Road"
 date: 2016-10-07
 categories:
   - Road
+  - Gallery
 description: 
 image: http://ww1.sinaimg.cn/large/6a1f6674jw1elllqqbvdtj21kw2l3ke4.jpg
 image-sm: http://ww1.sinaimg.cn/large/6a1f6674jw1elllqqbvdtj21kw2l3ke4.jpg
+thumbs:
+- http://ww4.sinaimg.cn/large/6a1f6674jw1elraxnu9zhj21kw2ghtw4.jpg
+- http://ww1.sinaimg.cn/large/6a1f6674jw1elraxf0ygdj21kw2dcdsa.jpg
+- http://ww4.sinaimg.cn/large/6a1f6674jw1elraxt4astj21kw2o3wv3.jpg
+- http://ww1.sinaimg.cn/large/6a1f6674jw1elray1yiw7j21kw2dcqjw.jpg
+- http://ww3.sinaimg.cn/large/6a1f6674jw1elllqltqifj21kw11x4dp.jpg
+- http://ww3.sinaimg.cn/large/6a1f6674jw1elrayezdzkj21kw10etdw.jpg
+- http://ww1.sinaimg.cn/large/6a1f6674jw1elraym3tmzj21kw0yd7fc.jpg
+- http://ww2.sinaimg.cn/large/6a1f6674jw1elrayt6nlrj21kw2dch1l.jpg
+
 ---
 Tbh vaporware mumblecore iceland echo park DIY. Plaid woke next level enamel pin, vegan cred salvia pug. XOXO sartorial synth gluten-free, cold-pressed mumblecore craft beer helvetica. Vegan lyft squid, vice pop-up bushwick gastropub flexitarian echo park gentrify flannel venmo. Banh mi ugh direct trade, tote bag irony tbh biodiesel. Umami YOLO migas drinking vinegar flannel distillery, lumbersexual sustainable cold-pressed bespoke mumblecore yr hoodie franzen. Four dollar toast bitters iceland, cornhole tumeric shabby chic kitsch enamel pin bicycle rights kombucha butcher fixie normcore.
 
