--- a/_posts/2016-09-07-tianye.markdown
+++ b/_posts/2016-09-07-tianye.markdown
@@ -4,9 +4,19 @@ title: "田野"
 date: 2016-10-20
 categories:
   - Road
+  - Gallery
 description: 
 image: http://ww3.sinaimg.cn/large/6a1f6674jw1elllqltqifj21kw11x4dp.jpg
 image-sm: http://ww3.sinaimg.cn/large/6a1f6674jw1elllqltqifj21kw11x4dp.jpg
+thumbs:
+- http://ww1.sinaimg.cn/mw1024/6a1f6674jw1elllqqbvdtj21kw2l3ke4.jpg
+- http://ww2.sinaimg.cn/mw1024/6a1f6674jw1elllqu9hhsj21kw14i484.jpg
+- http://ww3.sinaimg.cn/mw1024/6a1f6674jw1elllr1wyvlj21kw2j8npa.jpg
+- http://ww3.sinaimg.cn/mw1024/6a1f6674jw1elllr2jungj21kw0redia.jpg
+- http://ww2.sinaimg.cn/mw1024/6a1f6674jw1elllr4x3qdj21kw0mzjz4.jpg
+- http://ww3.sinaimg.cn/mw1024/6a1f6674jw1elllr6uhuhj21kw0y3afw.jpg
+- http://ww2.sinaimg.cn/mw1024/6a1f6674jw1elllr94boyj21kw0xgn3x.jpg
+- http://ww4.sinaimg.cn/mw1024/6a1f6674jw1elllrf9i8ej21kw0vkdxa.jpg
 ---
 Tbh vaporware mumblecore iceland echo park DIY. Plaid woke next level enamel pin, vegan cred salvia pug. XOXO sartorial synth gluten-free, cold-pressed mumblecore craft beer helvetica. Vegan lyft squid, vice pop-up bushwick gastropub flexitarian echo park gentrify flannel venmo. Banh mi ugh direct trade, tote bag irony tbh biodiesel. Umami YOLO migas drinking vinegar flannel distillery, lumbersexual sustainable cold-pressed bespoke mumblecore yr hoodie franzen. Four dollar toast bitters iceland, cornhole tumeric shabby chic kitsch enamel pin bicycle rights kombucha butcher fixie normcore.
 
